# archlinux

./: .gitignore  LICENSE  Setup.lhs  TODO  archlinux.cabal
Distribution/ArchLinux/: CabalTranslation.hs  HackageTranslation.hs  PkgBuild.hs  SrcRepo.hs  SystemProvides.lhs
data/: ghc-provides  ghc-provides.txt  library-providers.txt
scripts/: recdeps.hs  reverse_deps.hs
tests/: listconflicts.hs  readpkg.hs  recdeps.hs  toposort.hs
