name:           archlinux
version:        0.3.6
license:        BSD3
license-file:   LICENSE
author:         Don Stewart <dons@galois.com>
maintainer:     ArchHaskell Team <arch-haskell@haskell.org>
homepage:       http://github.com/archhaskell/
category:       Distribution
synopsis:       Support for working with Arch Linux packages.
description:    Support for working with Arch Linux packages.
                See also the cabal2arch tool <http://hackage.haskell.org/package/cabal2arch>
                for conversion between Hackage and AUR.
build-type:     Simple
stability:      stable
cabal-version:  >= 1.8
data-files:     data/*.txt

source-repository head
  type:         git
  location:     git://github.com/archhaskell/archlinux.git

library
    build-depends:  base >= 4 && < 6,
                    Cabal >= 1.6,
                    pretty,
                    containers,
                    directory,
                    filepath,
                    bytestring,
                    tar

    exposed-modules:
        Distribution.ArchLinux.PkgBuild
        Distribution.ArchLinux.SrcRepo
        Distribution.ArchLinux.CabalTranslation
        Distribution.ArchLinux.HackageTranslation
        Distribution.ArchLinux.SystemProvides
    other-modules:
        Paths_archlinux

executable recdeps
    main-is: scripts/recdeps.hs
    build-depends:
        base >=4 && <6,
        directory,
        filepath,
        containers,
        pretty,
        Cabal >= 1.6
    other-modules:
        Distribution.ArchLinux.PkgBuild
        Distribution.ArchLinux.SrcRepo
